[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/camera/camera.gd" type="Script" id=1]

[node name="camera" type="Camera2D"]
visible = false
current = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
script = ExtResource( 1 )

[node name="limites1" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites1"]

[node name="bottom_right" type="Position2D" parent="limites1"]
position = Vector2( 273, 175 )

[node name="limites2" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites2"]

[node name="bottom_right" type="Position2D" parent="limites2"]
position = Vector2( 273, 175 )

[node name="limites3" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites3"]

[node name="bottom_right" type="Position2D" parent="limites3"]
position = Vector2( 273, 175 )

[node name="limites4" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites4"]

[node name="bottom_right" type="Position2D" parent="limites4"]
position = Vector2( 273, 175 )

[node name="limites5" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites5"]

[node name="bottom_right" type="Position2D" parent="limites5"]
position = Vector2( 273, 175 )

[node name="limites6" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites6"]

[node name="bottom_right" type="Position2D" parent="limites6"]
position = Vector2( 273, 175 )

[node name="limites7" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites7"]

[node name="bottom_right" type="Position2D" parent="limites7"]
position = Vector2( 273, 175 )

[node name="limites8" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites8"]

[node name="bottom_right" type="Position2D" parent="limites8"]
position = Vector2( 273, 175 )

[node name="limites9" type="Node" parent="."]

[node name="top_left" type="Position2D" parent="limites9"]

[node name="bottom_right" type="Position2D" parent="limites9"]
position = Vector2( 273, 175 )
